deploy/kube/OdbDesignServer/service.yaml
##################################################################################################
# OdbDesignServer service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: odbdesign-server
  labels:
    app: odbdesign-server
    service: odbdesign-server
spec:
  # type: NodePort
  # ports:
  #   - port: 80
  #     targetPort: ods-dep-port
  #     nodePort: 30888
  #     name: ods-svc-port
  ports:
    - port: 80
      name: ods-svc-port
      targetPort: ods-dep-port
  selector:
    app: odbdesign-server
