deploy/kube/OdbDesignServer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odbdesign-server-ingress
spec:
  rules:
    - host: ods.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: odbdesign-server-service
                port:
                  name: ods-svc-port
    - host: precision5820
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: odbdesign-server-service
                port:
                  name: ods-svc-port
    # - host: nginx.local
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: nginx
    #             port:
    #               number: 80
